<resources>
    <string name="app_name">TaarufIndonesia</string>
    <string name="kriteria">Kriteria Pasangan Yang Diharapkan</string>
    <string name="umur">Umur</string>
    <string name="domisili_pasangan">Domisili Pasangan</string>
    <string name="pekerjaan_pasangan">Pekerjaan Pasangan</string>
    <string name="kriteria_harapan">Kriteria Yang Diharapkan</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="fullName">Nama Lengkap :</string>
    <string name="tanggalLahir">Tanggil Lahir :</string>
    <string name="alamat">Alamat :</string>
    <string name="pekerjaan_pribadi">Pekerjaan :</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="next">SELANJUTNYA</string>
    <string name="app_name1">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next1">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">LOGIN/REGISTER</string>
    <string name="slide_1_desc">Buat Akun Agar Kami Menyimpan Data Pribadimu Dengan Aman</string>

    <string name="slide_2_title">PROFIL</string>
    <string name="slide_2_desc">Pilih Gambar Atau Fotomu Yang Terbaik, Karena Hal Ini Untuk Mempermudah Untuk Mendapatkan Match</string>

    <string name="slide_3_title">PENGATURAN</string>
    <string name="slide_3_desc">Dari Sini Kamu Bisa Mengatur Jenis Kelamin Dan Berbagai Pengaturan Yang Lainnya</string>

    <string name="slide_4_title">MENJELAJAHI</string>
    <string name="slide_4_desc">Jika Kamu Menyukai Profil Tersebut, Geser Kearah Kanan Layar Pada Smartphone Atau Sebaliknya Jika Kamu Tidak Menyukai Geser Kearah Kiri Layar Smartphone. </string>


</resources>