<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".kriteria_calon">

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="710dp"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_fix" />

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20sp"
            android:text="@string/kriteria"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/umur1"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/umur"
                android:textColor="@color/shadowYellow" />

            <TextView
                android:id="@+id/until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/umur1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Sampai"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/umur2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/until"
                android:ems="10"
                android:gravity="center"

                android:inputType="textPersonName"
                android:text="@string/umur"
                android:textColor="@color/shadowYellow" />
        </RelativeLayout>

        <EditText
            android:id="@+id/domisili_pasangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/domisili_pasangan"
            android:textColor="@color/shadowYellow" />

        <EditText
            android:id="@+id/pekerjaan_pasangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/pekerjaan_pasangan"
            android:textColor="@color/shadowYellow" />

        <EditText
            android:id="@+id/kriteria_harapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/kriteria_harapan"
            android:textColor="@color/shadowYellow" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:color="@color/mainYellow"
            android:onClick="clickRegister"
            android:text="@string/register" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corner_grey"
            android:onClick="clickLogin"
            android:text="@string/login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>