<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_pribadi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/button_back_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_rounded_corner"
            android:text="Edit Profile"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/hijab" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/navYellow"
            app:cardCornerRadius="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="529dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/fullName"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/fullName_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Edit Text"
                    android:textAllCaps="false"
                    android:textColor="@color/shadowYellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/tanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tanggalLahir"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/tanggalLahir_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="EditText"
                    android:textAllCaps="false"
                    android:textColor="@color/shadowYellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/alamat"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/alamat_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Edit Text"
                    android:textAllCaps="false"
                    android:textColor="@color/shadowYellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/pekerjaanPribadi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pekerjaan_pribadi"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/pekerjaanPribadi_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Edit Text"
                    android:textAllCaps="false"
                    android:textColor="@color/shadowYellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/button_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_rounded_corner"
                    android:text="Simpan" />

                <Button
                    android:id="@+id/button_kembali"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_grey"
                    android:onClick="backButtonPressed"
                    android:text="Kembali" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>